syntax = "proto3";

package grpc;
option go_package= "main/app/grpc/proto/dex";

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./app/grpc/proto/userlist/userlist.proto
service UserListService {
    rpc GetUserList (UserListRequest) returns (UserListResponse) {}

  }
  
  message UserListRequest {
      int64  UserId = 1;
  }

  message UserListResponse {
    int64 UserId = 1;
    string Email = 2;
    string Name = 3;
    string Nickname = 4;
    string Profile = 5;
    string VisualCode = 6;
    string Created = 7;
  }